webapponedep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webappone
spec:
  selector:
    matchLabels:
      app: webappone
  template:
    metadata:
      labels:
        app: webappone
    spec:
      containers:
      - name: webappone
        image: dotnetkubwebappone
        imagePullPolicy: Never
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
