webapptwodep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapptwo
spec:
  selector:
    matchLabels:
      app: webapptwo
  template:
    metadata:
      labels:
        app: webapptwo
    spec:
      containers:
      - name: webapptwo
        image: dotnetkubwebapptwo
        imagePullPolicy: Never
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
