webapponeservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: webappone
spec:
  selector:
    app: webappone
  ports:
  - port: 9999
    targetPort: 8080
