webapptwoservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapptwo
spec:
  selector:
    app: webapptwo
  ports:
  - port: 9999
    targetPort: 8080
